Deck.view() now returns a view with the copy of the draw pile (previously this was always empty)